# Interject

./: CMakeLists.txt  LICENSE.TXT  README.md
.github/workflows/: build.yaml
Source/: CMakeLists.txt  disassembler.cxx  disassembler.hxx  event.cxx  event.hxx  memory_map.cxx  memory_map.hxx  modules.cxx  modules.hxx  patch.hxx  scope_guard.hxx  signal_action.hxx  symbols.cxx  symbols.hxx  threads.cxx  threads.hxx  trampoline.cxx  trampoline.hxx  transaction.cxx  transaction.hxx  unwind.cxx  unwind.hxx
Source/lib/: modules.hxx  symbols.hxx
Tests/: CMakeLists.txt  functions.c  functions.h  memory_map_tests.cxx  symbol_tests.cxx  trampoline_tests.cxx  transaction_tests.cxx
src/: CMakeLists.txt
src/include/: link_map.hxx
src/lib/: link_map.cxx  modules.cxx  symbols.cxx
src/test/: main.cxx
test/: CMakeLists.txt
